fixed nested media query, got rid of horizontal scroll bar

--- a/less/index.less
+++ b/less/index.less
@@ -83,11 +83,11 @@ html {
 
 html, body {
 	height: 100%;
-	@media screen and (max-width: 500px) {
+	width: 10%;
+	@media (max-width: 500px) {
 		max-width: 100%;
-		
 		background-color: pink;
-		
+		padding: 45%;
 	}
 }
 
